// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Project Health Page Waterfall Absolute 1`] = `
<div
  className="css-11f0p6-ProjectHealthWrapper ech0nhv2"
>
  <div
    className="css-m3r1dt-FlexRowContainer ech0nhv3"
  >
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-12nh665-Bar e1tzsy285"
          color="#E6CCE6"
          data-cy="commit-chart-bar"
          height="58.333333333333336%"
        />
        <div
          className="css-1at4och-Bar e1tzsy285"
          color="#F3EDF5"
          data-cy="commit-chart-bar"
          height="41.66666666666667%"
        />
        <div
          className="css-v22gg7-Bar e1tzsy285"
          color="#5D6C74"
          data-cy="commit-chart-bar"
          height="16.666666666666664%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          987bf
           
          7/16/21 3:53 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Jonathan Brill
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14901 add ssh key to EditSpawnHostModal (#805)
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-1gxi13m-Bar e1tzsy285"
          color="#CF4A22"
          data-cy="commit-chart-bar"
          height="50%"
        />
        <div
          className="css-98gzrf-Bar e1tzsy285"
          color="#E6CCE6"
          data-cy="commit-chart-bar"
          height="50%"
        />
        <div
          className="css-9e1mhg-Bar e1tzsy285"
          color="#FFDD49"
          data-cy="commit-chart-bar"
          height="16.666666666666664%"
        />
        <div
          className="css-pnxeiz-Bar e1tzsy285"
          color="#5D6C74"
          data-cy="commit-chart-bar"
          height="100%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          a77bd
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.1': v2.11.1
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="css-mh33b0-InactiveCommitLine ezzuvrx3"
      />
      <div
        className="leafygreen-ui-cssveg css-ue3t3g-ButtonContainer ezzuvrx4"
        onClick={[Function]}
      >
        <small
          className="css-nr1a01-ButtonText ezzuvrx1 leafygreen-ui-18tqmm7"
          data-cy="inactive-commits-button"
        >
          <div
            className="css-hifh5j-TopText ezzuvrx2"
          >
            1
             
          </div>
          inactive
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-itabzo-Bar e1tzsy285"
          color="#B8C4C2"
          data-cy="commit-chart-bar"
          height="41.66666666666667%"
        />
        <div
          className="css-1avs6lz-Bar e1tzsy285"
          color="#F3EDF5"
          data-cy="commit-chart-bar"
          height="33.33333333333333%"
        />
        <div
          className="css-1a408d4-Bar e1tzsy285"
          color="#FFDD49"
          data-cy="commit-chart-bar"
          height="41.66666666666667%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          9c1d1
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14799 Correctly visit configure page when no tab indicated (#810)
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-16xcq76-Bar e1tzsy285"
          color="#CF4A22"
          data-cy="commit-chart-bar"
          height="16.666666666666664%"
        />
        <div
          className="css-hv1o8l-Bar e1tzsy285"
          color="#B8C4C2"
          data-cy="commit-chart-bar"
          height="66.66666666666666%"
        />
        <div
          className="css-7y3sh3-Bar e1tzsy285"
          color="#5D6C74"
          data-cy="commit-chart-bar"
          height="33.33333333333333%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          f7f7f
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Sophie Stadler
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Remove navigation announcement toast (#808)
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-j8vdl2-Bar e1tzsy285"
          color="#13AA52"
          data-cy="commit-chart-bar"
          height="50%"
        />
        <div
          className="css-16xcq76-Bar e1tzsy285"
          color="#CF4A22"
          data-cy="commit-chart-bar"
          height="16.666666666666664%"
        />
        <div
          className="css-1mgn0aw-Bar e1tzsy285"
          color="#B8C4C2"
          data-cy="commit-chart-bar"
          height="50%"
        />
        <div
          className="css-1a408d4-Bar e1tzsy285"
          color="#FFDD49"
          data-cy="commit-chart-bar"
          height="41.66666666666667%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          211b3
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Chaya Malik
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.0': v2.11.0
        </small>
      </div>
    </div>
  </div>
  <div
    className="css-1dysym0-ColumnContainer e15dc98b2"
  >
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-1sahvn-SolidLine e15dc98b0"
    />
  </div>
</div>
`;

exports[`Storyshots Project Health Page Waterfall Percentage 1`] = `
<div
  className="css-11f0p6-ProjectHealthWrapper ech0nhv2"
>
  <div
    className="css-m3r1dt-FlexRowContainer ech0nhv3"
  >
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-98gzrf-Bar e1tzsy285"
          color="#E6CCE6"
          data-cy="commit-chart-bar"
          height="50%"
        />
        <div
          className="css-142mh4g-Bar e1tzsy285"
          color="#F3EDF5"
          data-cy="commit-chart-bar"
          height="35.714285714285715%"
        />
        <div
          className="css-13f02ew-Bar e1tzsy285"
          color="#5D6C74"
          data-cy="commit-chart-bar"
          height="14.285714285714285%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          987bf
           
          7/16/21 3:53 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Jonathan Brill
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14901 add ssh key to EditSpawnHostModal (#805)
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-1d41pnf-Bar e1tzsy285"
          color="#CF4A22"
          data-cy="commit-chart-bar"
          height="23.076923076923077%"
        />
        <div
          className="css-7p9oo3-Bar e1tzsy285"
          color="#E6CCE6"
          data-cy="commit-chart-bar"
          height="23.076923076923077%"
        />
        <div
          className="css-1ffkuay-Bar e1tzsy285"
          color="#FFDD49"
          data-cy="commit-chart-bar"
          height="7.6923076923076925%"
        />
        <div
          className="css-tg5tbo-Bar e1tzsy285"
          color="#5D6C74"
          data-cy="commit-chart-bar"
          height="46.15384615384615%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          a77bd
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.1': v2.11.1
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="css-mh33b0-InactiveCommitLine ezzuvrx3"
      />
      <div
        className="leafygreen-ui-cssveg css-ue3t3g-ButtonContainer ezzuvrx4"
        onClick={[Function]}
      >
        <small
          className="css-nr1a01-ButtonText ezzuvrx1 leafygreen-ui-18tqmm7"
          data-cy="inactive-commits-button"
        >
          <div
            className="css-hifh5j-TopText ezzuvrx2"
          >
            1
             
          </div>
          inactive
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-coyjab-Bar e1tzsy285"
          color="#B8C4C2"
          data-cy="commit-chart-bar"
          height="35.714285714285715%"
        />
        <div
          className="css-1777bzu-Bar e1tzsy285"
          color="#F3EDF5"
          data-cy="commit-chart-bar"
          height="28.57142857142857%"
        />
        <div
          className="css-1a071vo-Bar e1tzsy285"
          color="#FFDD49"
          data-cy="commit-chart-bar"
          height="35.714285714285715%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          9c1d1
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Mohamed Khelif
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          EVG-14799 Correctly visit configure page when no tab indicated (#810)
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-15gzlb8-Bar e1tzsy285"
          color="#CF4A22"
          data-cy="commit-chart-bar"
          height="14.285714285714285%"
        />
        <div
          className="css-9madw8-Bar e1tzsy285"
          color="#B8C4C2"
          data-cy="commit-chart-bar"
          height="57.14285714285714%"
        />
        <div
          className="css-1gzx0ae-Bar e1tzsy285"
          color="#5D6C74"
          data-cy="commit-chart-bar"
          height="28.57142857142857%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          f7f7f
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Sophie Stadler
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Remove navigation announcement toast (#808)
        </small>
      </div>
    </div>
    <div
      className="css-73nv4h-ColumnContainer ech0nhv1"
    >
      <div
        className="leafygreen-ui-cssveg css-tdhexo-ChartContainer e1tzsy286"
        data-cy="commit-chart-container"
        onBlur={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <div
          className="css-sa8qko-Bar e1tzsy285"
          color="#13AA52"
          data-cy="commit-chart-bar"
          height="31.57894736842105%"
        />
        <div
          className="css-cdpg9y-Bar e1tzsy285"
          color="#CF4A22"
          data-cy="commit-chart-bar"
          height="10.526315789473683%"
        />
        <div
          className="css-17jyj5p-Bar e1tzsy285"
          color="#B8C4C2"
          data-cy="commit-chart-bar"
          height="31.57894736842105%"
        />
        <div
          className="css-1gdglqb-Bar e1tzsy285"
          color="#FFDD49"
          data-cy="commit-chart-bar"
          height="26.31578947368421%"
        />
      </div>
      <div
        className="css-2v8zgo-LabelContainer evlik6v1"
      >
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          211b3
           
          7/13/21 2:51 PM
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Chaya Malik
           - 
        </small>
        <small
          className="css-7jff5-Text evlik6v0 leafygreen-ui-18tqmm7"
        >
          Triggered From Git Tag 'v2.11.0': v2.11.0
        </small>
      </div>
    </div>
  </div>
  <div
    className="css-1dysym0-ColumnContainer e15dc98b2"
  >
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-oxpn1r-DashedLine e15dc98b1"
    />
    <div
      className="css-1sahvn-SolidLine e15dc98b0"
    />
  </div>
</div>
`;
